# miniclaw

./: .env.example  .gitignore  README.md  chat.html  code-graph.html  intro.html  litellm-proxy.bat  miniclaw.bat  pyproject.toml
litellm-proxy/: README.md  config.yaml  config.yaml.bak  test.py  test4img.py  test4longcontext.py  test4std.py  test4stream.py
litellm-proxy/resources/images/: abc01.jfif
scripts/: chat_deepseek.py
src/miniclaw/: __main__.py  constant.py
src/miniclaw/agents/: __init__.py  base_llm_client.py  constant.py  llm_configurator.py  llm_tools_manager.py
src/miniclaw/agents/providers/: litellm_provider.py
src/miniclaw/agents/skills/docling/: SKILL.md
src/miniclaw/agents/skills/docling/scripts/: converter.py
src/miniclaw/agents/skills/markitdown/: SKILL.md
src/miniclaw/agents/skills/web-search/: SKILL.md
src/miniclaw/agents/tools/: __init__.py  browser_control.py  desktop_screenshot.py  file_io.py  file_search.py  get_current_time.py  launch_detached.py  llm_selector.py  mouse_control.py  shell.py  utils.py  view_image.py
src/miniclaw/app/: _app.py  llm_chat_context.py
src/miniclaw/app/routers/: __init__.py  llm_router.py
src/miniclaw/cli/: actor.py  clerk.py  console.py  main.py  memory.py  planner.py
src/miniclaw/config/: __init__.py  context.py  utils.py
src/miniclaw/utils/: common.py  logger.py  security.py  turn_taking.py
tests/agents/providers/: test_litellm_provider.py
tests/agents/tools/: test_launch_detached.py  test_launch_detached_debug.py
